Extend about section responsiveness

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -353,8 +353,29 @@ h3 {
 
 /* Contact Section */
 
+
 .name-box, .email-box, .message-box {
     margin-bottom: 30px;
+}
+
+@media screen and (max-width: 1190px) {
+    #about {
+        display: flex;
+        flex-direction: column;
+    }
+
+    #bio-info {
+        text-align: center;
+        margin: 20px auto;
+    }
+
+    #david-picture {
+        margin-left: auto;
+        margin-right: auto;
+        max-width: 70vw;
+        object-fit: contain;
+        display: block;
+    }
 }
 
 .name-box {
@@ -457,11 +478,6 @@ footer {
     }
 }
 
-@media screen and (max-width: 851px) {
-    #bio-info {
-        width: 50vw;
-    }
-}
 
 /* MEDIA QUERY FOR TABLETS AND SMALLER */
 @media screen and (max-width: 804px) {
@@ -582,10 +598,6 @@ footer {
         margin-left: 20px;
     }
 
-    #bio-info {
-        text-align: center;
-        margin: 20px auto;
-    }
 
     .hero {
         display: flex;
@@ -620,12 +632,6 @@ footer {
         color: black;
     }
 
-    #david-picture {
-        margin-left: auto;
-        margin-right: auto;
-        max-width: 70vw;
-        object-fit: contain;
-    }
 
     .projects {
         display: flex;
