updated padding-top on contact

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -431,6 +431,7 @@ h3 {
     border-left: solid 3px #43464F;
     padding-left: 15px;
     padding-bottom: 30px;
+    padding-top: 30px;
     display: flexbox;
     color: white;
 }
